add header to products and add images to files

--- a/products.html
+++ b/products.html
@@ -12,6 +12,22 @@
 </head>
 
 <body>
+    <div class="container products-page">
+        <header>
+            <div class="nav-bar">
+                <img src="img/lambda-black.png" />
 
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="products.html">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                </nav>
+            </div>
+            <img src="img/products-headerimg.jpg" />
+        </header>
+
+    </div>
 </body>
 </html>
