add products sections and footer and linked footer navs

--- a/products.html
+++ b/products.html
@@ -28,6 +28,23 @@
             <img src="img/products-headerimg.jpg" />
         </header>
 
+        <section class="products-top">
+
+        </section>
+
+        <section class="products-main">
+
+        </section>
+
+        <footer>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>  
+        </footer>
     </div>
 </body>
 </html>
