--- a/products.html
+++ b/products.html
@@ -29,7 +29,9 @@
         </header>
 
         <section class="products-top">
+            <h2>Products</h2>
 
+            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
         </section>
 
         <section class="products-main">
