add products main content

--- a/products.html
+++ b/products.html
@@ -35,7 +35,35 @@
         </section>
 
         <section class="products-main">
+            <div class="products-text">
+                <h2>Great Product</h2>
+                <ul>
+                    <li>Amazing feature</li>
+                    <li>Powerful features too</li>
+                    <li>You're not going to believe all these features!</li>
+                </ul>
+            </div>
+            <img src="img/products-board.jpg" />
 
+            <div class="products-text">
+                    <h2>Great Product</h2>
+                    <ul>
+                        <li>Amazing feature</li>
+                        <li>Powerful features too</li>
+                        <li>You're not going to believe all these features!</li>
+                    </ul>
+                </div>
+            <img src="img/products-code.jpg" />
+        
+            <div class="products-text">
+                    <h2>Great Product</h2>
+                    <ul>
+                        <li>Amazing feature</li>
+                        <li>Powerful features too</li>
+                        <li>You're not going to believe all these features!</li>
+                    </ul>
+            </div>
+            <img src="img/products-laptop.jpg" />
         </section>
 
         <footer>
