add product buttons and main layout

--- a/products.html
+++ b/products.html
@@ -44,6 +44,8 @@
                     <li>Powerful features too</li>
                     <li>You're not going to believe all these features!</li>
                 </ul>
+
+                <button>Learn More</button>
             </div>
             <img src="img/products-board.jpg" />
 
@@ -54,6 +56,8 @@
                         <li>Powerful features too</li>
                         <li>You're not going to believe all these features!</li>
                     </ul>
+
+                    <button>Learn More</button>
                 </div>
             <img src="img/products-code.jpg" />
         
@@ -64,6 +68,8 @@
                         <li>Powerful features too</li>
                         <li>You're not going to believe all these features!</li>
                     </ul>
+
+                    <button>Learn More</button>
             </div>
             <img src="img/products-laptop.jpg" />
         </section>
