styled lists and finished stretch goal 1

--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
             <div class="products-text">
                 <h2>Great Product</h2>
                 <ul>
-                    <li>Amazing feature</li>
+                    <li>Amazing features</li>
                     <li>Powerful features too</li>
                     <li>You're not going to believe all these features!</li>
                 </ul>
@@ -52,7 +52,7 @@
             <div class="products-text">
                     <h2>Great Product</h2>
                     <ul>
-                        <li>Amazing feature</li>
+                        <li>Amazing features</li>
                         <li>Powerful features too</li>
                         <li>You're not going to believe all these features!</li>
                     </ul>
@@ -64,7 +64,7 @@
             <div class="products-text">
                     <h2>Great Product</h2>
                     <ul>
-                        <li>Amazing feature</li>
+                        <li>Amazing features</li>
                         <li>Powerful features too</li>
                         <li>You're not going to believe all these features!</li>
                     </ul>
